[gd_scene load_steps=20 format=3 uid="uid://du7n5epg5pyx"]

[ext_resource type="Script" path="res://scenes/FarmScene1/FarmScene1.gd" id="1_8swu5"]
[ext_resource type="PackedScene" uid="uid://cb40qf1q6r5oe" path="res://components/StoryCamera2D.tscn" id="2_4r4cx"]
[ext_resource type="Texture2D" uid="uid://dt3ub0jr320r4" path="res://scenes/FarmScene1/field_scene.png" id="2_5xgqv"]
[ext_resource type="PackedScene" uid="uid://bi7328nybm04r" path="res://components/world_portrait_2d.tscn" id="2_al0o1"]
[ext_resource type="Texture2D" uid="uid://ds7he0p816kjg" path="res://scenes/FarmScene1/food_truck.png" id="3_7733y"]
[ext_resource type="Texture2D" uid="uid://dua0o42yskmwx" path="res://dialogic_data/characters/gran_potato/granpatato_smile.png" id="4_walip"]
[ext_resource type="Texture2D" uid="uid://oct5gh5lumns" path="res://dialogic_data/characters/fry/fry_potato_pain.png" id="5_2drll"]
[ext_resource type="PackedScene" uid="uid://wo65ur74hgk5" path="res://minigames/wiggle_keys/wiggle_keys_mini_game.tscn" id="5_7m3oc"]
[ext_resource type="Texture2D" uid="uid://1o221ybhna1d" path="res://dialogic_data/characters/crowtato/crowtato_normal.png" id="7_a5f11"]
[ext_resource type="PackedScene" uid="uid://ddofaqwx8104e" path="res://minigames/soda_cap_reveal/soda_cap_reaveal_mini_game.tscn" id="8_rm760"]

[sub_resource type="Animation" id="Animation_lsr5u"]
resource_name = "FadeToSodaCapMG"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GranpaWorldPortrait2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SodaCapReavealMiniGame:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FryWorldPortrait2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.25, 0.25, 0.25, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CrowtatoWorldPortrait2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nfy0f"]
resource_name = "FryFallOutOfBoxAnim"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FryWorldPortrait2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(332, -109), Vector2(241, -118), Vector2(89, 55)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FryWorldPortrait2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.833333, 1.16667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.24442, -2.3527, -1.61792, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FryWorldPortrait2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_qxam2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FryWorldPortrait2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(332, -109)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FryWorldPortrait2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FryWorldPortrait2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GranpaWorldPortrait2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SodaCapReavealMiniGame:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FryWorldPortrait2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Background:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CrowtatoWorldPortrait2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("FoodTruck:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1204, 802)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("FoodTruck:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.17643]
}

[sub_resource type="Animation" id="Animation_amtmr"]
resource_name = "TruckRollsIn"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FoodTruck:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1204, 802), Vector2(943, 175), Vector2(826, -77)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FoodTruck:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.17643, -1.76104, -1.86576]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcw3y"]
_data = {
"FadeToSodaCapMG": SubResource("Animation_lsr5u"),
"FryFallOutOfBoxAnim": SubResource("Animation_nfy0f"),
"RESET": SubResource("Animation_qxam2"),
"TruckRollsIn": SubResource("Animation_amtmr")
}

[sub_resource type="Animation" id="Animation_x1r1m"]
resource_name = "CrowFlyAround"
length = 20.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrowtatoWorldPortrait2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 16, 18),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1100, -350), Vector2(-843, -274), Vector2(-530, -442), Vector2(-375, -346), Vector2(-207, -465), Vector2(-128, -639), Vector2(-128, -639), Vector2(-1071, -682)]
}

[sub_resource type="Animation" id="Animation_hresn"]
resource_name = "CrowFlyIn"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrowtatoWorldPortrait2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1100, -350), Vector2(-950, -223), Vector2(-721, -222), Vector2(-565, -120), Vector2(-378, -143), Vector2(-224, -130), Vector2(-232, -86)]
}

[sub_resource type="Animation" id="Animation_hv3ba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrowtatoWorldPortrait2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1100, -350)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbs8v"]
_data = {
"CrowFlyAround": SubResource("Animation_x1r1m"),
"CrowFlyIn": SubResource("Animation_hresn"),
"RESET": SubResource("Animation_hv3ba")
}

[node name="FarmScene1" type="Node"]
script = ExtResource("1_8swu5")
bubble_chararcters = Array[NodePath]([NodePath("FryWorldPortrait2D"), NodePath("GranpaWorldPortrait2D"), NodePath("CrowtatoWorldPortrait2D")])

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_5xgqv")
metadata/_edit_lock_ = true

[node name="FoodTruck" type="Sprite2D" parent="."]
position = Vector2(1204, 802)
rotation = -2.17643
texture = ExtResource("3_7733y")
flip_v = true

[node name="StoryCamera2D" parent="." instance=ExtResource("2_4r4cx")]

[node name="FryWorldPortrait2D" parent="." instance=ExtResource("2_al0o1")]
position = Vector2(332, -109)
texture = ExtResource("5_2drll")

[node name="GranpaWorldPortrait2D" parent="." instance=ExtResource("2_al0o1")]
position = Vector2(-79, 48)
scale = Vector2(0.175, 0.175)
dialogic_character_name = "gran_potato"
dialogic_character_path = "res://dialogic_data/characters/gran_potato/gran_potato.dch"
texture = ExtResource("4_walip")

[node name="CrowtatoWorldPortrait2D" parent="." instance=ExtResource("2_al0o1")]
position = Vector2(-1100, -350)
scale = Vector2(0.2, 0.2)
dialogic_character_name = "crowtato"
dialogic_character_path = "res://dialogic_data/characters/crowtato/crowtato.dch"
texture = ExtResource("7_a5f11")

[node name="WiggleKeysMiniGame" parent="." instance=ExtResource("5_7m3oc")]
position = Vector2(294, -69)
accept_inputs_delay_on_start = 0.0

[node name="SodaCapReavealMiniGame" parent="." instance=ExtResource("8_rm760")]
process_mode = 4
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-153, -52)
scale = Vector2(0.3, 0.3)
started = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wcw3y")
}

[node name="CrowAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lbs8v")
}

[connection signal="flip" from="WiggleKeysMiniGame" to="." method="_on_wiggle_keys_mini_game_flip"]
[connection signal="win" from="WiggleKeysMiniGame" to="." method="_on_wiggle_keys_mini_game_win"]
[connection signal="win" from="SodaCapReavealMiniGame" to="." method="_on_soda_cap_reaveal_mini_game_win"]
